# LS

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  bug-2.md  bug_report_drop_basic_block.md  debug.md  examples_cpu_demo.ls  examples_cpu_html.ls  examples_cpu_zoom.ls  struct_heap_alloc_spec.md  test.ls
.github/workflows/: ci.yml
benchmarks/: endtoend_analysis.md  run_all.ps1
benchmarks/alloc/: alloc.cpp  alloc.ls  alloc.py  alloc.rb  alloc.rs  alloc_analysis.md  run.ps1
benchmarks/fib/: fib.c  fib.ls  fib.py  fib.rb  run.ps1
benchmarks/json/: json_bench.ls  json_bench.py  json_bench.rb  json_bench.rs
benchmarks/rawvecbench/: bench.ls  results.md
benchmarks/results/: alloc_summary.txt  fib_summary.txt  strbench_summary.txt  string_summary.txt  structbench_summary.txt  treebench_summary.txt  vecbench_summary.txt
benchmarks/strbench/: run.ps1  strbench.cpp  strbench.ls  strbench.py  strbench.rs  strbench_analysis.md
benchmarks/string/: ls_aot_disasm.txt  run.ps1  string.c  string.ls  string.py  string.rb  string_c_asm.lst
benchmarks/structbench/: run.ps1  structbench.cpp  structbench.ls  structbench.py  structbench.rs  structbench_analysis.md
benchmarks/treebench/: run.ps1  treebench.cpp  treebench.ls  treebench.py  treebench.rs  treebench_analysis.md
benchmarks/vecbench/: run.ps1  vecbench.cpp  vecbench.ls  vecbench.py  vecbench.rs  vecbench_analysis.md  vecbench_ls.ls
bugs/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27_vec.txt  3.txt  4.txt  5.txt  6.txt  7_design_choice.txt  8.txt  9.txt
docs/: block_clone_plan.md  bugfix_BF032_string_clone_borrowed_param.md  bugfix_L006_enum_vec_map_payload.md  bugfix_registry.md  build.md  closures_phase2_plan.md  closures_plan.md  commits.md  crt_mismatch_bug.md  enum_design.md  feature_inventory.md  features_history.md  generics_impl_postmortem.md  generics_plan.md  generics_v2_plan.md  known_limitations.md  linux_deployment.md  memcheck_plan.md  memory_model_overhaul.md  module_hierarchy_plan.md  move_semantics_plan.md  ownership.md  phases.md  plan_container_in_enum_payload.md  plan_enum_borrow.md  plan_enum_infra.md  plan_fft.md  plan_fn_value_as_block.md  plan_future_ideas.md  plan_hpc.md  plan_impl_builtin_types.md  plan_json.md  plan_l009_mangling.md  plan_md_html.md  plan_memory_lifetime.md  plan_method_generics.md  plan_module_namespace.md  plan_operator_overload.md  plan_output_formats.md  plan_phase3_remove_builtin_vec.md  (+28 more)
editors/vscode-ls/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json
features/: bit_pattern_match.md  region_design.md
lib/model/: cli.ls  lsm.ls
lib/oran/: cus.ls
lib/sim/: gallery.ls  htmlview.lls  regview.ls  render.ls  report.ls
lib/std/: atomic.ls  bytes.ls  c.ls  complex.ls  env.ls  hash.ls  html.ls  map.ls  md.ls  num.ls  par.ls  path.ls  perf.ls  plot.ls  plottl.ls  proc.ls  regex.ls  ring.ls  str.ls  strconv.ls  sync.ls  task.ls  thread.ls
runtime/: builtins.c  ls_regex.c  ls_regex.h  memcheck.c  os_backend.h  os_posix.c  os_win32.c  perf_now.c  profiler.c
src/: ast.c  ast.h  builtins_io.c  builtins_io.h  builtins_io_cg.c  builtins_math.c  builtins_math.h  builtins_math_cg.c  builtins_perf.c  builtins_perf.h  builtins_perf_cg.c  checker.c  checker.h  checker_borrow.c  checker_decl.c  checker_elide.c  checker_internal.h  checker_lower.c  codegen.c  codegen.h  codegen_decl.c  codegen_di.c  codegen_expr.c  codegen_internal.h  codegen_lifetime.c  codegen_match.c  codegen_noalias.c  codegen_noalias.h  codegen_own.c  codegen_stmt.c  common.h  debug.c  debug.h  doc_assets.c  doc_assets.h  emit_c.c  emit_c.h  ffi.c  ffi.h  format.c  (+23 more)
std/: c.ls  env.ls  fft.ls  fs.ls  hash.ls  hello.ls  html.ls  io.ls  json.ls  map.ls  md.ls  os.ls  path.ls  plot.ls  plotfmt.ls  plottl.ls  proc.ls  rand.ls  rawvec.ls  regex.ls  ring.ls  stack.ls  str.ls  strconv.ls  string.ls  tensor.ls  time.ls  vec.ls
stdlib/: hello.ls  io.ls
tests/: map_builtin_migration.md  test_arena_pod.cmake  test_atomic.cmake  test_bare_math_import_reject.cmake  test_bare_print_reject.cmake  test_bf044_shortcircuit.cmake  test_bf045_string_param.cmake  test_bf046_map_struct_val.cmake  test_bit_match_reject.cmake  test_block_mutref.cmake  test_block_ref_param.cmake  test_borrow_escape_reject.cmake  test_borrow_for_in.cmake  test_bytes_oob.cmake  test_chan.cmake  test_chan_forin.cmake  test_chan_mpmc.cmake  test_char_lit.cmake  test_clone_elision.cmake  test_codegen.c  test_complex.cmake  test_comptime.cmake  test_comptime_const.cmake  test_comptime_match.cmake  test_comptime_v2.cmake  test_cond_smoke.cmake  test_container_methods.cmake  test_debug_info.cmake  test_decl_init_mul.cmake  test_deep_nesting.cmake  test_deque.cmake  test_deref_method.cmake  test_derive.cmake  test_derive_fuzz_corpus.cmake  test_derive_generic.cmake  test_derust_keywords.cmake  test_destroy.cmake  test_doc.cmake  test_e3_glue.cmake  test_emit_c.cmake  (+210 more)
tests/fuzz/: .gitignore  _probe.lls  fuzz.py  genfuzz.py  reduce.py  stdfuzz.py
tests/mca_oracle/: regen_golden.sh
tests/samples/: _repro_enum_vec.lls  _repro_enum_vec.ls  arena_pod_reject.lls  arena_pod_test.lls  array_test.lls  array_test.ls  at_time_bench_test.ls  atomic_test.ls  atomic_thread_test.ls  auto_drop_callable_test.ls  auto_drop_test.ls  bare_math_import_reject.ls  bare_print_reject.lls  bit_match_nonint_reject.lls  bit_match_nonint_reject.ls  bit_match_test.ls  bit_match_width_reject.ls  block_field_reject.ls  block_mutref_bare_reject.lls  block_mutref_bare_reject.ls  block_mutref_readonly_reject.lls  block_mutref_readonly_reject.ls  block_mutref_test.lls  block_mutref_test.ls  block_ref_param_test.ls  block_return_reject.lls  block_return_reject.ls  borrow_attrs_test.ls  borrow_basic_test.ls  borrow_caller_live_test.ls  borrow_chain_test.ls  borrow_enum_payload_reject.ls  borrow_field_reject.ls  borrow_for_in_test.lls  borrow_local_capture_reject.ls  borrow_local_copyout_reject.lls  (+873 more)
(+293 files in other folders)
